# odoo-env

./: .gitignore  README.md  oenv.py  pyproject.toml
.github/workflows/: python-publish.yml
src/oenv/: oenv.py
src/oenv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
